kubernetes/supporting-services/traefik/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway

metadata:
  name: api-gateway
  namespace: traefik

spec:
  gatewayClassName: traefik

  listeners:
    - name: http
      protocol: HTTP
      port: 8000
      allowedRoutes:
        namespaces:
          from: All

    - name: https
      protocol: HTTPS
      port: 8443
      allowedRoutes:
        namespaces:
          from: All
